Initial WebSocket implementation
